--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
           <h2 class="visually-hidden">our tactic</h2>
           <ul class="tactic-list">
             <li class="tactic-list-item">
+              <svg class="tactic-list-icon icon" width="64" height="64">
+                <use href="./images/icons/symbol-defs.svg#ante"></use>
+              </svg>
               <h3 class="section-specific-title">strategy</h3>
               <p class="tactic-list-item-text">
                 Our goal is to identify the business problem to walk away with
