--- a/index.html
+++ b/index.html
@@ -79,11 +79,32 @@
       <section class="section-tactic">
         <div class="container">
           <h2 class="visually-hidden">our tactic</h2>
+          <ul class="tactic-icon-list">
+            <li class="tactic-icon-list-item">
+              <svg class="tactic-icon icon" width="64" height="64">
+                <use href="./images/icons/symbol-defs.svg#icon-antenna-1"></use>
+              </svg>
+            </li>
+            <li class="tactic-icon-list-item">
+              <svg class="tactic-icon icon" width="64" height="64">
+                <use href="./images/icons/symbol-defs.svg#icon-clock-1"></use>
+              </svg>
+            </li>
+            <li class="tactic-icon-list-item">
+              <svg class="tactic-icon icon" width="64" height="64">
+                <use href="./images/icons/symbol-defs.svg#icon-diagram-1"></use>
+              </svg>
+            </li>
+            <li class="tactic-icon-list-item">
+              <svg class="tactic-icon icon" width="64" height="64">
+                <use
+                  href="./images/icons/symbol-defs.svg#icon-astronaut-1"
+                ></use>
+              </svg>
+            </li>
+          </ul>
           <ul class="tactic-list">
             <li class="tactic-list-item">
-              <svg class="tactic-list-icon icon" width="64" height="64">
-                <use href="./images/icons/symbol-defs.svg#ante"></use>
-              </svg>
               <h3 class="section-specific-title">strategy</h3>
               <p class="tactic-list-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -131,6 +152,46 @@
               <div class="team-list-text-content">
                 <h3 class="section-specific-title">mark guerrero</h3>
                 <p class="team-list-text">product designer</p>
+                <!-- social list icons -->
+                <ul class="team-social-list">
+                  <li class="team-social-list-item">
+                    <a href="" class="team-social-link"
+                      ><svg class="team-icon icon" width="16" height="16">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="team-social-link"
+                      ><svg class="team-icon icon" width="16" height="16">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-twitter-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="team-social-link"
+                      ><svg class="team-icon icon" width="16" height="16">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-facebook-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-social-list-item">
+                    <a href="" class="team-social-link"
+                      ><svg class="team-icon icon" width="16" height="16">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-linkedin-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -144,6 +205,46 @@
               <div class="team-list-text-content">
                 <h3 class="section-specific-title">tom ford</h3>
                 <p class="team-list-text">frontend developer</p>
+                <!-- social list icons -->
+                <ul class="team-social-list">
+                  <li class="team-social-list-item">
+                    <a href="" class="team-social-link"
+                      ><svg class="team-icon icon" width="16" height="16">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="team-social-link"
+                      ><svg class="team-icon icon" width="16" height="16">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-twitter-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="team-social-link"
+                      ><svg class="team-icon icon" width="16" height="16">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-facebook-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-social-list-item">
+                    <a href="" class="team-social-link"
+                      ><svg class="team-icon icon" width="16" height="16">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-linkedin-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -157,6 +258,46 @@
               <div class="team-list-text-content">
                 <h3 class="section-specific-title">camila garcia</h3>
                 <p class="team-list-text">marketing</p>
+                <!-- social list icons -->
+                <ul class="team-social-list">
+                  <li class="team-social-list-item">
+                    <a href="" class="team-social-link"
+                      ><svg class="team-icon icon" width="16" height="16">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="team-social-link"
+                      ><svg class="team-icon icon" width="16" height="16">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-twitter-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="team-social-link"
+                      ><svg class="team-icon icon" width="16" height="16">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-facebook-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-social-list-item">
+                    <a href="" class="team-social-link"
+                      ><svg class="team-icon icon" width="16" height="16">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-linkedin-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -170,6 +311,46 @@
               <div class="team-list-text-content">
                 <h3 class="section-specific-title">daniel wilson</h3>
                 <p class="team-list-text">ui designer</p>
+                <!-- social list icons -->
+                <ul class="team-social-list">
+                  <li class="team-social-list-item">
+                    <a href="" class="team-social-link"
+                      ><svg class="team-icon icon" width="16" height="16">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="team-social-link"
+                      ><svg class="team-icon icon" width="16" height="16">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-twitter-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="team-social-link"
+                      ><svg class="team-icon icon" width="16" height="16">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-facebook-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="team-social-list-item">
+                    <a href="" class="team-social-link"
+                      ><svg class="team-icon icon" width="16" height="16">
+                        <use
+                          href="./images/icons/symbol-defs.svg#icon-linkedin-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -183,11 +364,19 @@
           <h2 class="section-title">our portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio-section/portfolio-banking-app.jpg"
-                alt="bancking app display"
-                width="359"
-              />
+              <div class="portfolio-list-item-image">
+                <img
+                  src="./images/portfolio-section/portfolio-banking-app.jpg"
+                  alt="bancking app display"
+                />
+                <div class="portfolio-list-item-overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
 
               <div class="portfolio-list-text-content">
                 <h3 class="section-specific-title">Banking App</h3>
@@ -196,11 +385,19 @@
             </li>
 
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio-section/portfolio-cashless-payment.jpg"
-                alt="person paying with the phone"
-                width="359"
-              />
+              <div class="portfolio-list-item-image">
+                <img
+                  src="./images/portfolio-section/portfolio-cashless-payment.jpg"
+                  alt="person paying with the phone"
+                />
+                <div class="portfolio-list-item-overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
 
               <div class="portfolio-list-text-content">
                 <h3 class="section-specific-title">Cashless Payment</h3>
@@ -209,11 +406,19 @@
             </li>
 
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio-section/portfolio-meditation-app.jpg"
-                alt="laptop with an opened app"
-                width="359"
-              />
+              <div class="portfolio-list-item-image">
+                <img
+                  src="./images/portfolio-section/portfolio-meditation-app.jpg"
+                  alt="laptop with an opened app"
+                />
+                <div class="portfolio-list-item-overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
 
               <div class="portfolio-list-text-content">
                 <h3 class="section-specific-title">Meditation App</h3>
@@ -222,11 +427,19 @@
             </li>
 
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio-section/portfolio-taxi-service.jpg"
-                alt="person sitting in a car with taxi app on phone"
-                width="359"
-              />
+              <div class="portfolio-list-item-image">
+                <img
+                  src="./images/portfolio-section/portfolio-taxi-service.jpg"
+                  alt="person sitting in a car with taxi app on phone"
+                />
+                <div class="portfolio-list-item-overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
 
               <div class="portfolio-list-text-content">
                 <h3 class="section-specific-title">Taxi Service</h3>
@@ -235,11 +448,19 @@
             </li>
 
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio-section/portfolio-screen-illustrations.jpg"
-                alt="phone's display of screen"
-                width="359"
-              />
+              <div class="portfolio-list-item-image">
+                <img
+                  src="./images/portfolio-section/portfolio-screen-illustrations.jpg"
+                  alt="phone's display of screen"
+                />
+                <div class="portfolio-list-item-overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
 
               <div class="portfolio-list-text-content">
                 <h3 class="section-specific-title">Screen Illustrations</h3>
@@ -248,11 +469,19 @@
             </li>
 
             <li class="portfolio-list-item">
-              <img
-                src="./images/portfolio-section/portfolio-online-courses.jpg"
-                alt="girl standing with the phone"
-                width="359"
-              />
+              <div class="portfolio-list-item-image">
+                <img
+                  src="./images/portfolio-section/portfolio-online-courses.jpg"
+                  alt="girl standing with the phone"
+                />
+                <div class="portfolio-list-item-overlay">
+                  <p>
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
 
               <div class="portfolio-list-text-content">
                 <h3 class="section-specific-title">Online Courses</h3>
@@ -268,13 +497,58 @@
     <!-- FOOTER -->
     <footer class="section-footer">
       <div class="container">
-        <a href="./index.html" class="logo-link footer-logo-link"
-          >web<span class="footer-logo-link-span">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-content">
+          <div class="footer-logo-text">
+            <a href="./index.html" class="logo-link footer-logo-link"
+              >web<span class="footer-logo-link-span">Studio</span></a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="footer-socials">
+            <p>Social media</p>
+            <ul class="footer-socials-list">
+              <li class="footer-socials-list-item">
+                <a href="" class="footer-list-social-link"
+                  ><svg class="footer-socials-icon icon" width="24" height="24">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-socials-list-item">
+                <a href="" class="footer-list-social-link"
+                  ><svg class="footer-socials-icon icon" width="24" height="24">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-twitter-2"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-socials-list-item">
+                <a href="" class="footer-list-social-link"
+                  ><svg class="footer-socials-icon icon" width="24" height="24">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-facebook-2"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-socials-list-item">
+                <a href="" class="footer-list-social-link"
+                  ><svg class="footer-socials-icon icon" width="24" height="24">
+                    <use
+                      href="./images/icons/symbol-defs.svg#icon-linkedin-2"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
     <!-- end of footer -->
