--- a/index.html
+++ b/index.html
@@ -79,32 +79,13 @@
       <section class="section-tactic">
         <div class="container">
           <h2 class="visually-hidden">our tactic</h2>
-          <ul class="tactic-icon-list">
-            <li class="tactic-icon-list-item">
-              <svg class="tactic-icon icon" width="64" height="64">
-                <use href="./images/icons/symbol-defs.svg#icon-antenna-1"></use>
-              </svg>
-            </li>
-            <li class="tactic-icon-list-item">
-              <svg class="tactic-icon icon" width="64" height="64">
-                <use href="./images/icons/symbol-defs.svg#icon-clock-1"></use>
-              </svg>
-            </li>
-            <li class="tactic-icon-list-item">
-              <svg class="tactic-icon icon" width="64" height="64">
-                <use href="./images/icons/symbol-defs.svg#icon-diagram-1"></use>
-              </svg>
-            </li>
-            <li class="tactic-icon-list-item">
-              <svg class="tactic-icon icon" width="64" height="64">
-                <use
-                  href="./images/icons/symbol-defs.svg#icon-astronaut-1"
-                ></use>
-              </svg>
-            </li>
-          </ul>
           <ul class="tactic-list">
             <li class="tactic-list-item">
+              <div class="tactic-icon-container">
+                <svg class="tactic-icon icon" width="64" height="64">
+                  <use href="./images/icons/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="section-specific-title">strategy</h3>
               <p class="tactic-list-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -112,6 +93,11 @@
               </p>
             </li>
             <li class="tactic-list-item">
+              <div class="tactic-icon-container">
+                <svg class="tactic-icon icon" width="64" height="64">
+                  <use href="./images/icons/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="section-specific-title">punctuality</h3>
               <p class="tactic-list-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -119,6 +105,12 @@
               </p>
             </li>
             <li class="tactic-list-item">
+              <div class="tactic-icon-container">
+                <svg class="tactic-icon icon" width="64" height="64">
+                  <use href="./images/icons/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
+
               <h3 class="section-specific-title">diligence</h3>
               <p class="tactic-list-item-text">
                 Research and confirm brands that present the strongest digital
@@ -126,6 +118,11 @@
               </p>
             </li>
             <li class="tactic-list-item">
+              <div class="tactic-icon-container">
+                <svg class="tactic-icon icon" width="64" height="64">
+                  <use href="./images/icons/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="section-specific-title">technologies</h3>
               <p class="tactic-list-item-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -158,7 +155,7 @@
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
                         <use
-                          href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                          href="./images/icons/icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
@@ -167,7 +164,7 @@
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
                         <use
-                          href="./images/icons/symbol-defs.svg#icon-twitter-2"
+                          href="./images/icons/icons.svg#icon-twitter-2"
                         ></use>
                       </svg>
                     </a>
@@ -176,7 +173,7 @@
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
                         <use
-                          href="./images/icons/symbol-defs.svg#icon-facebook-2"
+                          href="./images/icons/icons.svg#icon-facebook-2"
                         ></use>
                       </svg>
                     </a>
@@ -186,7 +183,7 @@
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
                         <use
-                          href="./images/icons/symbol-defs.svg#icon-linkedin-2"
+                          href="./images/icons/icons.svg#icon-linkedin-2"
                         ></use>
                       </svg>
                     </a>
@@ -211,7 +208,7 @@
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
                         <use
-                          href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                          href="./images/icons/icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
@@ -220,7 +217,7 @@
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
                         <use
-                          href="./images/icons/symbol-defs.svg#icon-twitter-2"
+                          href="./images/icons/icons.svg#icon-twitter-2"
                         ></use>
                       </svg>
                     </a>
@@ -229,7 +226,7 @@
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
                         <use
-                          href="./images/icons/symbol-defs.svg#icon-facebook-2"
+                          href="./images/icons/icons.svg#icon-facebook-2"
                         ></use>
                       </svg>
                     </a>
@@ -239,7 +236,7 @@
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
                         <use
-                          href="./images/icons/symbol-defs.svg#icon-linkedin-2"
+                          href="./images/icons/icons.svg#icon-linkedin-2"
                         ></use>
                       </svg>
                     </a>
@@ -264,7 +261,7 @@
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
                         <use
-                          href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                          href="./images/icons/icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
@@ -273,7 +270,7 @@
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
                         <use
-                          href="./images/icons/symbol-defs.svg#icon-twitter-2"
+                          href="./images/icons/icons.svg#icon-twitter-2"
                         ></use>
                       </svg>
                     </a>
@@ -282,7 +279,7 @@
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
                         <use
-                          href="./images/icons/symbol-defs.svg#icon-facebook-2"
+                          href="./images/icons/icons.svg#icon-facebook-2"
                         ></use>
                       </svg>
                     </a>
@@ -292,7 +289,7 @@
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
                         <use
-                          href="./images/icons/symbol-defs.svg#icon-linkedin-2"
+                          href="./images/icons/icons.svg#icon-linkedin-2"
                         ></use>
                       </svg>
                     </a>
@@ -317,7 +314,7 @@
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
                         <use
-                          href="./images/icons/symbol-defs.svg#icon-instagram-2"
+                          href="./images/icons/icons.svg#icon-instagram-2"
                         ></use>
                       </svg>
                     </a>
@@ -326,7 +323,7 @@
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
                         <use
-                          href="./images/icons/symbol-defs.svg#icon-twitter-2"
+                          href="./images/icons/icons.svg#icon-twitter-2"
                         ></use>
                       </svg>
                     </a>
@@ -335,7 +332,7 @@
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
                         <use
-                          href="./images/icons/symbol-defs.svg#icon-facebook-2"
+                          href="./images/icons/icons.svg#icon-facebook-2"
                         ></use>
                       </svg>
                     </a>
@@ -345,7 +342,7 @@
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
                         <use
-                          href="./images/icons/symbol-defs.svg#icon-linkedin-2"
+                          href="./images/icons/icons.svg#icon-linkedin-2"
                         ></use>
                       </svg>
                     </a>
@@ -369,13 +366,11 @@
                   src="./images/portfolio-section/portfolio-banking-app.jpg"
                   alt="bancking app display"
                 />
-                <div class="portfolio-list-item-overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-list-item-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
 
               <div class="portfolio-list-text-content">
@@ -390,13 +385,12 @@
                   src="./images/portfolio-section/portfolio-cashless-payment.jpg"
                   alt="person paying with the phone"
                 />
-                <div class="portfolio-list-item-overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="portfolio-list-item-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
 
               <div class="portfolio-list-text-content">
@@ -411,13 +405,12 @@
                   src="./images/portfolio-section/portfolio-meditation-app.jpg"
                   alt="laptop with an opened app"
                 />
-                <div class="portfolio-list-item-overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="portfolio-list-item-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
 
               <div class="portfolio-list-text-content">
@@ -432,13 +425,12 @@
                   src="./images/portfolio-section/portfolio-taxi-service.jpg"
                   alt="person sitting in a car with taxi app on phone"
                 />
-                <div class="portfolio-list-item-overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="portfolio-list-item-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
 
               <div class="portfolio-list-text-content">
@@ -453,13 +445,12 @@
                   src="./images/portfolio-section/portfolio-screen-illustrations.jpg"
                   alt="phone's display of screen"
                 />
-                <div class="portfolio-list-item-overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="portfolio-list-item-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
 
               <div class="portfolio-list-text-content">
@@ -474,13 +465,12 @@
                   src="./images/portfolio-section/portfolio-online-courses.jpg"
                   alt="girl standing with the phone"
                 />
-                <div class="portfolio-list-item-overlay">
-                  <p>
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="portfolio-list-item-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
 
               <div class="portfolio-list-text-content">
@@ -496,8 +486,8 @@
 
     <!-- FOOTER -->
     <footer class="section-footer">
-      <div class="container">
-        <div class="footer-content">
+      <div class="footer-content">
+        <div class="container">
           <div class="footer-logo-text">
             <a href="./index.html" class="logo-link footer-logo-link"
               >web<span class="footer-logo-link-span">Studio</span></a
@@ -508,41 +498,33 @@
             </p>
           </div>
           <div class="footer-socials">
-            <p>Social media</p>
+            <p class="footer-socials-text">Social media</p>
             <ul class="footer-socials-list">
               <li class="footer-socials-list-item">
                 <a href="" class="footer-list-social-link"
                   ><svg class="footer-socials-icon icon" width="24" height="24">
-                    <use
-                      href="./images/icons/symbol-defs.svg#icon-instagram-2"
-                    ></use>
+                    <use href="./images/icons/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-socials-list-item">
                 <a href="" class="footer-list-social-link"
                   ><svg class="footer-socials-icon icon" width="24" height="24">
-                    <use
-                      href="./images/icons/symbol-defs.svg#icon-twitter-2"
-                    ></use>
+                    <use href="./images/icons/icons.svg#icon-twitter-2"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-socials-list-item">
                 <a href="" class="footer-list-social-link"
                   ><svg class="footer-socials-icon icon" width="24" height="24">
-                    <use
-                      href="./images/icons/symbol-defs.svg#icon-facebook-2"
-                    ></use>
+                    <use href="./images/icons/icons.svg#icon-facebook-2"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-socials-list-item">
                 <a href="" class="footer-list-social-link"
                   ><svg class="footer-socials-icon icon" width="24" height="24">
-                    <use
-                      href="./images/icons/symbol-defs.svg#icon-linkedin-2"
-                    ></use>
+                    <use href="./images/icons/icons.svg#icon-linkedin-2"></use>
                   </svg>
                 </a>
               </li>
