--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
           <a href="./index.html" class="logo-link">web<span>Studio</span></a>
           <ul class="navigation-list">
             <li class="navigation-list-item">
-              <a class="navigation-list-link" href="./index.html">studio</a>
+              <a
+                class="navigation-list-link active-page-underline"
+                href="./index.html"
+                >studio</a
+              >
             </li>
 
             <li class="navigation-list-item">
@@ -47,12 +51,12 @@
 
         <address class="communication-info">
           <ul class="communication-list">
-            <li>
+            <li class="communication-list-item">
               <a href="mailto:info@devstudio.com" class="communication-link"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="communication-list-item">
               <a href="tel:+110001111111" class="communication-link"
                 >+11 (000) 111-11-11</a
               >
@@ -486,50 +490,48 @@
 
     <!-- FOOTER -->
     <footer class="section-footer">
-      <div class="footer-content">
-        <div class="container">
-          <div class="footer-logo-text">
-            <a href="./index.html" class="logo-link footer-logo-link"
-              >web<span class="footer-logo-link-span">Studio</span></a
-            >
-            <p class="footer-text">
-              Increase the flow of customers and sales for your business with
-              digital marketing & growth solutions.
-            </p>
-          </div>
-          <div class="footer-socials">
-            <p class="footer-socials-text">Social media</p>
-            <ul class="footer-socials-list">
-              <li class="footer-socials-list-item">
-                <a href="" class="footer-list-social-link"
-                  ><svg class="footer-socials-icon icon" width="24" height="24">
-                    <use href="./images/icons/icons.svg#icon-instagram-2"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-socials-list-item">
-                <a href="" class="footer-list-social-link"
-                  ><svg class="footer-socials-icon icon" width="24" height="24">
-                    <use href="./images/icons/icons.svg#icon-twitter-2"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-socials-list-item">
-                <a href="" class="footer-list-social-link"
-                  ><svg class="footer-socials-icon icon" width="24" height="24">
-                    <use href="./images/icons/icons.svg#icon-facebook-2"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="footer-socials-list-item">
-                <a href="" class="footer-list-social-link"
-                  ><svg class="footer-socials-icon icon" width="24" height="24">
-                    <use href="./images/icons/icons.svg#icon-linkedin-2"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+      <div class="footer-content container">
+        <div class="footer-logo-text">
+          <a href="./index.html" class="logo-link footer-logo-link"
+            >web<span class="footer-logo-link-span">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-socials">
+          <p class="footer-socials-text">Social media</p>
+          <ul class="footer-socials-list">
+            <li class="footer-socials-list-item">
+              <a href="" class="footer-list-social-link"
+                ><svg class="footer-socials-icon icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-list-item">
+              <a href="" class="footer-list-social-link"
+                ><svg class="footer-socials-icon icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-twitter-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-list-item">
+              <a href="" class="footer-list-social-link"
+                ><svg class="footer-socials-icon icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-facebook-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-list-item">
+              <a href="" class="footer-list-social-link"
+                ><svg class="footer-socials-icon icon" width="24" height="24">
+                  <use href="./images/icons/icons.svg#icon-linkedin-2"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
