--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <li class="tactic-list-item">
               <div class="tactic-icon-container">
                 <svg class="tactic-icon icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-antenna-1"></use>
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="section-specific-title">strategy</h3>
@@ -99,7 +99,7 @@
             <li class="tactic-list-item">
               <div class="tactic-icon-container">
                 <svg class="tactic-icon icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-clock-1"></use>
+                  <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <h3 class="section-specific-title">punctuality</h3>
@@ -111,7 +111,7 @@
             <li class="tactic-list-item">
               <div class="tactic-icon-container">
                 <svg class="tactic-icon icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-diagram-1"></use>
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
 
@@ -124,7 +124,7 @@
             <li class="tactic-list-item">
               <div class="tactic-icon-container">
                 <svg class="tactic-icon icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-astronaut-1"></use>
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="section-specific-title">technologies</h3>
@@ -158,27 +158,21 @@
                   <li class="team-social-list-item">
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-twitter-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -186,9 +180,7 @@
                   <li class="team-social-list-item">
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -211,27 +203,21 @@
                   <li class="team-social-list-item">
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-twitter-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -239,9 +225,7 @@
                   <li class="team-social-list-item">
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -264,27 +248,21 @@
                   <li class="team-social-list-item">
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-twitter-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -292,9 +270,7 @@
                   <li class="team-social-list-item">
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -317,27 +293,21 @@
                   <li class="team-social-list-item">
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-twitter-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-facebook-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -345,9 +315,7 @@
                   <li class="team-social-list-item">
                     <a href="" class="team-social-link"
                       ><svg class="team-icon icon" width="16" height="16">
-                        <use
-                          href="./images/icons/icons.svg#icon-linkedin-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -506,28 +474,28 @@
             <li class="footer-socials-list-item">
               <a href="" class="footer-list-social-link"
                 ><svg class="footer-socials-icon icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-instagram-2"></use>
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-list-item">
               <a href="" class="footer-list-social-link"
                 ><svg class="footer-socials-icon icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-twitter-2"></use>
+                  <use href="./images/icons.svg#icon-twitter-2"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-list-item">
               <a href="" class="footer-list-social-link"
                 ><svg class="footer-socials-icon icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-facebook-2"></use>
+                  <use href="./images/icons.svg#icon-facebook-2"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-list-item">
               <a href="" class="footer-list-social-link"
                 ><svg class="footer-socials-icon icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-linkedin-2"></use>
+                  <use href="./images/icons.svg#icon-linkedin-2"></use>
                 </svg>
               </a>
             </li>
